# nomercy

./: .gitignore  Cargo.toml  LICENSE  README.md  roadmap.md  rust_developer_guide.md  spec.md
crates/flake/: Cargo.toml
crates/flake/src/: lib.rs
crates/flake/tests/: smoke.rs
crates/flaky_sessions/: Cargo.toml  README.md
crates/flaky_sessions/src/: lib.rs
crates/nomercy-cli/: Cargo.toml  README.md
crates/nomercy-cli/src/: main.rs
crates/nomercy-core/: Cargo.toml
crates/nomercy-core/src/: lib.rs
crates/nomercy-macros/: Cargo.toml
crates/nomercy-macros/src/: lib.rs
